--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -18,7 +18,7 @@ log4j.appender.STDOUT.layout.ConversionPattern= %p - %d{yyyy-MM-dd HH:mm:ss} - %
 log4j.appender.FILEOUT = org.apache.log4j.DailyRollingFileAppender
 log4j.appender.FILEOUT.File = ${logfile.root}/log.txt
 log4j.appender.FILEOUT.Append = true
-log4j.appender.FILEOUT.DatePattern = '.'yyyy-MM-dd
+log4j.appender.FILEOUT.DatePattern = yyyy-MM-dd'.'
 log4j.appender.FILEOUT.Threshold = DEBUG
 log4j.appender.FILEOUT.layout = org.apache.log4j.PatternLayout
 log4j.appender.FILEOUT.layout.ConversionPattern= %p - %d{yyyy-MM-dd HH:mm:ss} - %m%n
