增加直接输入账号信息的功能

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -16,7 +16,7 @@ log4j.appender.STDOUT.layout.ConversionPattern= %p - %d{yyyy-MM-dd HH:mm:ss} - %
 
 # Set the appender named FILEOUT to be a Console appender
 log4j.appender.FILEOUT = org.apache.log4j.DailyRollingFileAppender
-log4j.appender.FILEOUT.File = ${logfile.root}/LOG/log
+log4j.appender.FILEOUT.File = ${logfile.root}/log
 log4j.appender.FILEOUT.Append = true
 log4j.appender.FILEOUT.DatePattern = '-'yyyy-MM-dd'.txt'
 log4j.appender.FILEOUT.Threshold = DEBUG
