--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>me.flicker-soul.safetree</groupId>
     <artifactId>SafeTreeProject</artifactId>
-    <version>0.9.5.1-beta</version>
+    <version>0.9.5.2-beta</version>
     <build>
         <plugins>
             <plugin>
@@ -21,10 +21,15 @@
         </plugins>
     </build>
     <dependencies>
+        <!--<dependency>-->
+            <!--<groupId>net.sourceforge.htmlunit</groupId>-->
+            <!--<artifactId>htmlunit</artifactId>-->
+            <!--<version>2.33</version>-->
+        <!--</dependency>-->
         <dependency>
             <groupId>net.sourceforge.htmlunit</groupId>
             <artifactId>htmlunit</artifactId>
-            <version>2.33</version>
+            <version>2.34.1</version>
         </dependency>
 
         <dependency>
